fix: grocery item text doesn't wrap on overflow

--- a/src/components/GroceryItem.less
+++ b/src/components/GroceryItem.less
@@ -12,7 +12,7 @@
 
   &-label {
     padding: 5px;
-    flex: 1 0 auto;
+    flex: 1 1 auto;
   }
 
   &-checkbox {
